force-app/main/default/objects/MS_FSM_Unplanned_Work__c/MS_FSM_Unplanned_Work__c.object-meta.xml
<CustomObject>
    <description>Used for Field Technicians performing unplanned work.</description>
    <label>Unplanned Work</label>
    <nameField>
        <displayFormat>UW-{0000}</displayFormat>
        <label>Unplanned Work Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unplanned Work</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>