force-app/main/default/objects/MS_FSM_Unplanned_Work__c/fields/MS_FSM_Description__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Description__c</fullName>
    <description>Populated by the technician in the field</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>