force-app/main/default/objects/MS_FSM_Unplanned_Work__c/fields/MS_FSM_Installed_Serial_Description__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Installed_Serial_Description__c</fullName>
    <label>Installed Serial or Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>