force-app/main/default/objects/MS_FSM_Unplanned_Work__c/fields/MS_FSM_Removed_Serial_or_Description__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Removed_Serial_or_Description__c</fullName>
    <label>Removed Serial or Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>