force-app/main/default/objects/MS_FSM_Unplanned_Work__c/fields/MS_FSM_Root_Asset__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Root_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Root Asset in which the unplanned work is performed</description>
    <label>Root Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Unplanned Work</relationshipLabel>
    <relationshipName>Unplanned_Work</relationshipName>
    <type>Lookup</type>
</CustomField>