force-app/main/default/objects/MS_FSM_Unplanned_Work__c/fields/MS_FSM_Work_Group__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Work_Group__c</fullName>
    <label>Work Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MS_FSM_Work_Group</valueSetName>
    </valueSet>
</CustomField>