force-app/main/default/objects/MS_FSM_Unplanned_Work__c/fields/MS_FSM_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Work_Order__c</fullName>
    <description>Work Order in which this Unplanned Work was performed</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Unplanned Work</relationshipLabel>
    <relationshipName>Unplanned_Work</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>