force-app/main/default/objects/MS_FSM_Unplanned_Work__c/fields/MS_FSM_Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Work Order Line Item created based on this unplanned work. This is populated by the dispatcher</description>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Unplanned Work</relationshipLabel>
    <relationshipName>Unplanned_Work</relationshipName>
    <type>Lookup</type>
</CustomField>